--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -418,7 +418,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e84b9d46-57c3-4861-9952-08c02cf21e02"
+        "outputId": "7e058460-06a5-4a81-a526-b511636b31b1"
       },
       "source": [
         "! git clone 'https://github.com/cristobalperezp/CC6205-NLP.git'\n",
@@ -431,12 +431,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'CC6205-NLP'...\n",
-            "remote: Enumerating objects: 9, done.\u001b[K\n",
-            "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
-            "remote: Total 9 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (9/9), 12.13 KiB | 3.03 MiB/s, done.\n",
+            "fatal: destination path 'CC6205-NLP' already exists and is not an empty directory.\n",
             "Brr\n",
             "Marcianeke\n",
             "Vamo' a estar con Pailita\n",
@@ -552,26 +547,26 @@
       "source": [
         "def get_tokens(text):\n",
         "  ### Inicio del código ###\n",
+        "  \n",
+        "  # Importamos paquete string\n",
         "  import string\n",
-        "\n",
-        "  tags = re.compile('<.*?>|&([a-z0-9]+|#[0-9]{1,6}|#x[0-9a-f]{1,6});')\n",
-        "  text = re.sub(tags,' ',text)\n",
-        "  regex = re.compile('[%s]' % re.escape(string.punctuation))\n",
-        "  text = regex.sub('', text)\n",
-        "  text = re.sub(r'[^\\w\\s]','', text)\n",
+        "  # Eliminamos puntuaciones, paréntesis, comillas, guiones y otros símbolos.\n",
+        "  text = re.sub(r'[^\\w\\s]',' ', text)\n",
+        "  # Hacemos split del texto para pasarlo a tokens en una lista\n",
         "  text = text.split()\n",
-        "\n",
+        "  # Retornamos los tokens\n",
         "  return text\n",
+        "  \n",
         "  ### Fin del código ###"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "KqlSpefv4_EH",
-        "outputId": "385f9696-8e12-4702-f354-1968fcc4fc19",
+        "outputId": "c7912f34-dfd8-4a98-d7fb-65e4d86d7237",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -580,7 +575,7 @@
         "tokens = get_tokens(text)\n",
         "tokens"
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +605,8 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
-              " 'ratata',\n",
+              " 'rata',\n",
+              " 'ta',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
@@ -639,7 +635,8 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
-              " 'ratata',\n",
+              " 'rata',\n",
+              " 'ta',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
@@ -651,19 +648,26 @@
               " 'pura',\n",
               " 'quiere',\n",
               " 'mezclar',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
               " 'Esperame',\n",
               " 'que',\n",
@@ -771,22 +775,30 @@
               " 'titulado',\n",
               " 'sin',\n",
               " 'diploma',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
-              " 'Didimelo',\n",
+              " 'Di',\n",
+              " 'dimelo',\n",
               " 'má',\n",
               " 'Ah',\n",
-              " 'pepeligrosa',\n",
+              " 'pe',\n",
+              " 'peligrosa',\n",
               " 'Quiero',\n",
               " 'ver',\n",
               " 'como',\n",
@@ -919,7 +931,8 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
-              " 'ratata',\n",
+              " 'rata',\n",
+              " 'ta',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
@@ -947,7 +960,8 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
-              " 'ratata',\n",
+              " 'rata',\n",
+              " 'ta',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
@@ -966,7 +980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 19
         }
       ]
     },
@@ -995,14 +1009,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6c1258d1-3c51-4dfd-b92e-3da4b74d6ebb"
+        "outputId": "f7b81691-7b18-44a2-a1a1-62bf782d0f8f"
       },
       "source": [
         "from nltk.tokenize import wordpunct_tokenize \n",
         "nltk_tokens = wordpunct_tokenize(text)\n",
         "nltk_tokens"
       ],
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1474,9 +1488,112 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 16
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Vemos en qué tokens difieren el tokenizador programado con el de nltk\n",
+        "diff = [x for x in nltk_tokens if x not in tokens]\n",
+        "diff"
+      ],
+      "metadata": {
+        "id": "TnLDSiWKD4rf",
+        "outputId": "2ebe09c2-3fb7-4b0b-8db8-0eb28d19e7d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[\"'\",\n",
+              " '(',\n",
+              " ',',\n",
+              " ')',\n",
+              " '(',\n",
+              " '-',\n",
+              " ')',\n",
+              " '(',\n",
+              " ')',\n",
+              " ',',\n",
+              " \"'\",\n",
+              " '(',\n",
+              " ',',\n",
+              " ')',\n",
+              " '(',\n",
+              " '-',\n",
+              " ')',\n",
+              " ',',\n",
+              " \"'\",\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " ',',\n",
+              " \"'\",\n",
+              " \"'\",\n",
+              " \"'\",\n",
+              " ',',\n",
+              " ',',\n",
+              " \"'\",\n",
+              " \"'\",\n",
+              " ',',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " '-',\n",
+              " ',',\n",
+              " '-',\n",
+              " \"'\",\n",
+              " ',',\n",
+              " ',',\n",
+              " ',',\n",
+              " \"'\",\n",
+              " \"'\",\n",
+              " '(',\n",
+              " ',',\n",
+              " ')',\n",
+              " '(',\n",
+              " '-',\n",
+              " ')',\n",
+              " ',',\n",
+              " \"'\",\n",
+              " '(',\n",
+              " ',',\n",
+              " ')',\n",
+              " '(',\n",
+              " '-',\n",
+              " ')',\n",
+              " ',',\n",
+              " \"'\",\n",
+              " ',']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "En qué difieren:"
+      ],
+      "metadata": {
+        "id": "ybKyn0j7F1zc"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1502,7 +1619,7 @@
       "source": [
         "dataset = [\"I like human languages\", \"I like programming languages\", \"Spanish is my favorite language\"]"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1522,12 +1639,14 @@
       "source": [
         "def get_vocab(dataset):\n",
         "  ### Aquí inicia tu código ###\n",
-        "  \n",
-        "  ...\n",
-        "\n",
+        "  vocab = []\n",
+        "  for i in range(len(dataset)):\n",
+        "    vocab += get_tokens(dataset[i])\n",
+        "  vocab = list(set(vocab))\n",
+        "  return vocab\n",
         "  ### Aquí termina tu código ###"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1542,14 +1661,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BNzPKiAx0Aa1"
+        "id": "BNzPKiAx0Aa1",
+        "outputId": "df207b40-b36e-4135-b836-ca3439027621",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "vocab = get_vocab(dataset)\n",
         "vocab"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['is',\n",
+              " 'Spanish',\n",
+              " 'language',\n",
+              " 'I',\n",
+              " 'human',\n",
+              " 'programming',\n",
+              " 'favorite',\n",
+              " 'languages',\n",
+              " 'my',\n",
+              " 'like']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
