--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -351,7 +351,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -418,25 +418,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1355b8bc-07f3-4b03-c8a3-ae4e22b0aceb"
+        "outputId": "4713e987-1c0b-4dad-a4e9-2f5b5b539921"
       },
       "source": [
         "! git clone 'https://github.com/cristobalperezp/CC6205-NLP.git'\n",
         "text = codecs.open('/content/CC6205-NLP/marcianeke.txt', 'r', 'UTF-8').read()\n",
         "print(text)"
       ],
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'CC6205-NLP'...\n",
-            "remote: Enumerating objects: 15, done.\u001b[K\n",
-            "remote: Counting objects: 100% (15/15), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (13/13), done.\u001b[K\n",
-            "remote: Total 15 (delta 3), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (15/15), 15.10 KiB | 2.52 MiB/s, done.\n",
+            "fatal: destination path 'CC6205-NLP' already exists and is not an empty directory.\n",
             "Brr\n",
             "Marcianeke\n",
             "Vamo' a estar con Pailita\n",
@@ -564,14 +559,14 @@
         "  \n",
         "  ### Fin del código ###"
       ],
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "KqlSpefv4_EH",
-        "outputId": "2c5918b3-cec5-4e26-b86a-60c0a16ba124",
+        "outputId": "035656e5-f14c-4fa5-dae7-31350218b66e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -580,7 +575,7 @@
         "tokens = get_tokens(text)\n",
         "tokens"
       ],
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -985,7 +980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 24
         }
       ]
     },
@@ -1014,14 +1009,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "17f73751-62a3-4818-8be4-82e6ca075703"
+        "outputId": "79286be4-cf98-4aa6-a326-c10110eed546"
       },
       "source": [
         "from nltk.tokenize import wordpunct_tokenize \n",
         "nltk_tokens = wordpunct_tokenize(text)\n",
         "nltk_tokens"
       ],
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1493,7 +1488,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 25
         }
       ]
     },
@@ -1507,12 +1502,12 @@
       ],
       "metadata": {
         "id": "TnLDSiWKD4rf",
-        "outputId": "bcfd4960-250f-4651-cad4-0b239dcb7c32",
+        "outputId": "5590e24f-5411-44f7-cc2c-51c2f837d269",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,7 +1517,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 26
         }
       ]
     },
@@ -1559,7 +1554,7 @@
       "source": [
         "dataset = [\"I like human languages\", \"I like programming languages\", \"Spanish is my favorite language\"]"
       ],
-      "execution_count": 6,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1587,7 +1582,7 @@
         "  return vocab\n",
         "  ### Aquí termina tu código ###"
       ],
-      "execution_count": 7,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1603,7 +1598,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "BNzPKiAx0Aa1",
-        "outputId": "5664b11c-2688-472b-a155-e420ecd0c087",
+        "outputId": "8dfb2d97-891b-49e2-f912-dbf345c4ee1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1612,7 +1607,7 @@
         "vocab = get_vocab(dataset)\n",
         "vocab"
       ],
-      "execution_count": 8,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1631,7 +1626,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 29
         }
       ]
     },
@@ -1685,7 +1680,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# REVISAR\n",
         "def pre_processing(vocab):\n",
         "  ### Aquí inicia tu código ###\n",
         "  nltk_stopwords = [\"i\", \"me\", \"my\", \"myself\", \"we\", \"our\", \"ours\", \"ourselves\", \"you\", \"your\", \"yours\", \"yourself\", \"yourselves\", \"he\", \"him\",\n",
@@ -1706,18 +1700,15 @@
         "\n",
         "  porter_rules = {'sses': 'ss', 'ies':'i', 's':''}\n",
         "  for id, i in enumerate(vocab):\n",
-        "    print(id,i)\n",
         "    if i in nltk_stopwords:\n",
         "      vocab.remove(i)\n",
         "    else:\n",
         "      for j in list(porter_rules.keys()):\n",
-        "        if j in i:\n",
-        "          #print(j)\n",
-        "          #print(i)\n",
+        "        if i.endswith(j):\n",
         "          replace_word = i.replace(j, porter_rules[j])\n",
         "          vocab[id] = replace_word\n",
-        "          #print(replace_word)\n",
         "          break\n",
+        "  vocab = list(set(vocab))\n",
         "  return vocab\n",
         "  ### Aquí termina tu código ###\n",
         "    "
@@ -1725,14 +1716,14 @@
       "metadata": {
         "id": "CwQS8lcLJczI"
       },
-      "execution_count": 19,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "onOSuS-_mL2F",
-        "outputId": "9941fa0c-68c0-4916-a190-b394eb3380b8",
+        "outputId": "d2e1b942-2386-4a2c-92fa-68ab48000574",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1741,30 +1732,17 @@
         "vocab = pre_processing(vocab)\n",
         "vocab"
       ],
-      "execution_count": 20,
+      "execution_count": 33,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0 Spanish\n",
-            "1 favorite\n",
-            "2 human\n",
-            "3 language\n",
-            "4 languages\n",
-            "5 like\n",
-            "6 programming\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['Spanih', 'favorite', 'human', 'language', 'language', 'like', 'programming']"
+              "['programming', 'like', 'human', 'language', 'favorite', 'Spanish']"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 33
         }
       ]
     },
@@ -1798,7 +1776,7 @@
         "d5 = 'El gato maulla y después se come la comida'\n",
         "dataset = [d0, d1, d2, d3, d4, d5]"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1851,7 +1829,7 @@
       "metadata": {
         "id": "TAJr10x-rfRj"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1862,7 +1840,7 @@
       "metadata": {
         "id": "MmQ2ggQvRDB5"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1888,7 +1866,7 @@
         "dataset_bow = bag_of_words(dataset)\n",
         "dataset_bow"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2226,7 +2204,7 @@
         "  return tf\n",
         "  ### Aquí termina tu código ###"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2252,7 +2230,7 @@
         "tf = calc_tf(dataset_bow)\n",
         "tf"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2590,7 +2568,7 @@
         "  return idf_dict\n",
         "  ### Aquí termina tu código ###"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2615,7 +2593,7 @@
         "idf = calc_idf(dataset_bow)\n",
         "idf"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2719,7 +2697,7 @@
         "\n",
         "  ### Aquí termina tu código ### "
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2745,7 +2723,7 @@
         "tf_idf = calc_tf_idf(tf, idf)\n",
         "tf_idf"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3076,7 +3054,7 @@
         "      similarity = cosine_similarity(tf_idf.loc[v1].values, tf_idf.loc[v2].values)\n",
         "      similarity_matrix[i][j] = similarity\n"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3091,7 +3069,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
