--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -351,7 +351,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 21,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -418,14 +418,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4713e987-1c0b-4dad-a4e9-2f5b5b539921"
+        "outputId": "58b2680c-8935-4e7d-fd27-4438b1569450"
       },
       "source": [
         "! git clone 'https://github.com/cristobalperezp/CC6205-NLP.git'\n",
         "text = codecs.open('/content/CC6205-NLP/marcianeke.txt', 'r', 'UTF-8').read()\n",
         "print(text)"
       ],
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,28 +545,48 @@
         "id": "IF1RcIwq4G2x"
       },
       "source": [
-        "def get_tokens(text):\n",
+        "#def get_tokens(text):\n",
         "  ### Inicio del código ###\n",
         "  \n",
-        "  # Importamos paquete string\n",
-        "  import string\n",
-        "  # Eliminamos puntuaciones, paréntesis, comillas, guiones y otros símbolos.\n",
-        "  text = re.sub(r'[^\\w\\s]',' ', text)\n",
-        "  # Hacemos split del texto para pasarlo a tokens en una lista\n",
-        "  text = text.split()\n",
-        "  # Retornamos los tokens\n",
-        "  return text\n",
+        "#  import string\n",
+        "#  text = re.sub(r'[^\\w\\s]',' ', text)\n",
+        "#  text = text.split()\n",
+        "#  return text\n",
         "  \n",
+        "  ### Fin del código ###\n",
+        "\n",
+        "\n",
+        "def get_tokens(text):\n",
+        "  ### Inicio del código ###\n",
+        "  spaces = ['',' ','\\n','\\r']\n",
+        "  punctuation = [',','.','-','(',')',':',';',\"'\"]\n",
+        "  tokens = []\n",
+        "  aux = ''\n",
+        "  for i in text:\n",
+        "    if i in spaces:\n",
+        "      if aux!='':\n",
+        "        tokens.append(aux)\n",
+        "        aux = ''\n",
+        "    elif i in punctuation:\n",
+        "      if aux!='':\n",
+        "        tokens.append(aux)\n",
+        "        aux = ''\n",
+        "      tokens.append(i)\n",
+        "    else:\n",
+        "      aux = aux + i\n",
+        "  if aux!='':\n",
+        "        tokens.append(aux)\n",
+        "  return tokens\n",
         "  ### Fin del código ###"
       ],
-      "execution_count": 23,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "KqlSpefv4_EH",
-        "outputId": "035656e5-f14c-4fa5-dae7-31350218b66e",
+        "outputId": "ab2e044b-7f66-4a91-c4e8-77e9de6d6881",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -575,7 +595,7 @@
         "tokens = get_tokens(text)\n",
         "tokens"
       ],
-      "execution_count": 24,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,6 +604,7 @@
               "['Brr',\n",
               " 'Marcianeke',\n",
               " 'Vamo',\n",
+              " \"'\",\n",
               " 'a',\n",
               " 'estar',\n",
               " 'con',\n",
@@ -596,8 +617,11 @@
               " 'de',\n",
               " 'una',\n",
               " 'criminal',\n",
+              " '(',\n",
               " 'ah',\n",
+              " ',',\n",
               " 'ah',\n",
+              " ')',\n",
               " 'Esa',\n",
               " 'que',\n",
               " 'el',\n",
@@ -605,18 +629,25 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
+              " '(',\n",
               " 'rata',\n",
+              " '-',\n",
               " 'ta',\n",
+              " ')',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
               " 'flotar',\n",
               " 'y',\n",
               " 'fumar',\n",
+              " '(',\n",
               " 'brr',\n",
+              " ')',\n",
               " 'Tussi',\n",
+              " ',',\n",
               " 'keta',\n",
               " 'quiere',\n",
+              " \"'\",\n",
               " 'mezclar',\n",
               " 'Dimelo',\n",
               " 'má',\n",
@@ -626,8 +657,11 @@
               " 'de',\n",
               " 'una',\n",
               " 'criminal',\n",
+              " '(',\n",
               " 'ah',\n",
+              " ',',\n",
               " 'ah',\n",
+              " ')',\n",
               " 'Esa',\n",
               " 'que',\n",
               " 'el',\n",
@@ -635,8 +669,11 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
+              " '(',\n",
               " 'rata',\n",
+              " '-',\n",
               " 'ta',\n",
+              " ')',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
@@ -644,29 +681,38 @@
               " 'y',\n",
               " 'fumar',\n",
               " 'Tussi',\n",
+              " ',',\n",
               " 'keta',\n",
               " 'pura',\n",
               " 'quiere',\n",
+              " \"'\",\n",
               " 'mezclar',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Esperame',\n",
@@ -688,6 +734,7 @@
               " 'Puro',\n",
               " 'corte',\n",
               " 'calle',\n",
+              " ',',\n",
               " 'no',\n",
               " 'de',\n",
               " 'maquillaje',\n",
@@ -696,6 +743,7 @@
               " 'y',\n",
               " 'nos',\n",
               " 'vamo',\n",
+              " \"'\",\n",
               " 'de',\n",
               " 'viaje',\n",
               " 'Tanto',\n",
@@ -704,6 +752,7 @@
               " 'hago',\n",
               " 'que',\n",
               " 'lo',\n",
+              " \"'\",\n",
               " 'culo',\n",
               " 'bajen',\n",
               " 'Ella',\n",
@@ -735,9 +784,11 @@
               " 'letra',\n",
               " 'llamen',\n",
               " 'pa',\n",
+              " \"'\",\n",
               " 'mi',\n",
               " 'booking',\n",
               " 'Generando',\n",
+              " ',',\n",
               " 'sigo',\n",
               " 'en',\n",
               " 'la',\n",
@@ -752,16 +803,19 @@
               " 'woman',\n",
               " 'Tanto',\n",
               " 'whisky',\n",
+              " ',',\n",
               " 'pisco',\n",
               " 'que',\n",
               " 'hasta',\n",
               " 'lo',\n",
+              " \"'\",\n",
               " 'vecinos',\n",
               " 'toman',\n",
               " 'Si',\n",
               " 'se',\n",
               " 'tiran',\n",
               " 'pa',\n",
+              " \"'\",\n",
               " 'aca',\n",
               " 'puede',\n",
               " 'que',\n",
@@ -769,6 +823,7 @@
               " 'arena',\n",
               " 'coman',\n",
               " 'Ja',\n",
+              " ',',\n",
               " 'en',\n",
               " 'el',\n",
               " 'chanteo',\n",
@@ -776,28 +831,37 @@
               " 'sin',\n",
               " 'diploma',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Di',\n",
+              " '-',\n",
               " 'dimelo',\n",
               " 'má',\n",
               " 'Ah',\n",
+              " ',',\n",
               " 'pe',\n",
+              " '-',\n",
               " 'peligrosa',\n",
               " 'Quiero',\n",
               " 'ver',\n",
@@ -808,6 +872,7 @@
               " 'Eso',\n",
               " 'de',\n",
               " 'atra',\n",
+              " \"'\",\n",
               " 'con',\n",
               " 'el',\n",
               " 'Gucci',\n",
@@ -833,6 +898,7 @@
               " 'Flemibron',\n",
               " 'Louis',\n",
               " 'Vuitton',\n",
+              " ',',\n",
               " 'le',\n",
               " 'quito',\n",
               " 'la',\n",
@@ -848,6 +914,7 @@
               " 'espanto',\n",
               " 'Puro',\n",
               " 'perro',\n",
+              " ',',\n",
               " 'le',\n",
               " 'doy',\n",
               " 'de',\n",
@@ -883,6 +950,7 @@
               " 'shock',\n",
               " 'My',\n",
               " 'love',\n",
+              " ',',\n",
               " 'rica',\n",
               " 'en',\n",
               " 'las',\n",
@@ -898,6 +966,7 @@
               " 'a',\n",
               " 'comprar',\n",
               " 'blone',\n",
+              " \"'\",\n",
               " 'al',\n",
               " 'growshop',\n",
               " 'En',\n",
@@ -905,6 +974,7 @@
               " 'interior',\n",
               " 'los',\n",
               " 'do',\n",
+              " \"'\",\n",
               " 'Me',\n",
               " 'roza',\n",
               " 'su',\n",
@@ -922,8 +992,11 @@
               " 'una',\n",
               " 'cri',\n",
               " 'minal',\n",
+              " '(',\n",
               " 'ah',\n",
+              " ',',\n",
               " 'ah',\n",
+              " ')',\n",
               " 'Esa',\n",
               " 'que',\n",
               " 'el',\n",
@@ -931,8 +1004,11 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
+              " '(',\n",
               " 'rata',\n",
+              " '-',\n",
               " 'ta',\n",
+              " ')',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
@@ -940,8 +1016,10 @@
               " 'y',\n",
               " 'fumar',\n",
               " 'Tussi',\n",
+              " ',',\n",
               " 'keta',\n",
               " 'quiere',\n",
+              " \"'\",\n",
               " 'mezclar',\n",
               " 'Dimelo',\n",
               " 'má',\n",
@@ -951,8 +1029,11 @@
               " 'de',\n",
               " 'una',\n",
               " 'criminal',\n",
+              " '(',\n",
               " 'ah',\n",
+              " ',',\n",
               " 'ah',\n",
+              " ')',\n",
               " 'Esa',\n",
               " 'que',\n",
               " 'el',\n",
@@ -960,8 +1041,11 @@
               " 'le',\n",
               " 'gusta',\n",
               " 'jalar',\n",
+              " '(',\n",
               " 'rata',\n",
+              " '-',\n",
               " 'ta',\n",
+              " ')',\n",
               " 'Que',\n",
               " 'le',\n",
               " 'guste',\n",
@@ -969,18 +1053,21 @@
               " 'y',\n",
               " 'fumar',\n",
               " 'Tussi',\n",
+              " ',',\n",
               " 'keta',\n",
               " 'pura',\n",
               " 'quiere',\n",
+              " \"'\",\n",
               " 'mezclar',\n",
               " 'Marcianeke',\n",
+              " ',',\n",
               " 'Pailita',\n",
               " 'Young',\n",
               " 'Varas']"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 43
         }
       ]
     },
@@ -999,7 +1086,7 @@
         "id": "jGQ7CJy3-3aH"
       },
       "source": [
-        "Supuestos aqui\n"
+        "#Supuestos aqui\n"
       ]
     },
     {
@@ -1009,14 +1096,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79286be4-cf98-4aa6-a326-c10110eed546"
+        "outputId": "fdb7c3f4-45c6-4df0-a977-35727cb994de"
       },
       "source": [
         "from nltk.tokenize import wordpunct_tokenize \n",
         "nltk_tokens = wordpunct_tokenize(text)\n",
         "nltk_tokens"
       ],
-      "execution_count": 25,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1488,7 +1575,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 44
         }
       ]
     },
@@ -1502,29 +1589,29 @@
       ],
       "metadata": {
         "id": "TnLDSiWKD4rf",
-        "outputId": "5590e24f-5411-44f7-cc2c-51c2f837d269",
+        "outputId": "07949a67-229b-49b4-b7dd-1c181be93ecf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{\"'\", '(', ')', ',', '-'}"
+              "set()"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 45
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "En qué difieren:"
+        "#En qué difieren:"
       ],
       "metadata": {
         "id": "ybKyn0j7F1zc"
@@ -1554,7 +1641,7 @@
       "source": [
         "dataset = [\"I like human languages\", \"I like programming languages\", \"Spanish is my favorite language\"]"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1582,7 +1669,7 @@
         "  return vocab\n",
         "  ### Aquí termina tu código ###"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1607,7 +1694,7 @@
         "vocab = get_vocab(dataset)\n",
         "vocab"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1674,7 +1761,11 @@
         "id": "iY7g67Ml0aby"
       },
       "source": [
-        "    Explique sus reglas aquí:\n"
+        "    Explique sus reglas aquí: \n",
+        "\n",
+        "    Como el vocabulario está en inglés, se utilizará la lista de stopwords de \n",
+        "    nltk para las reglas de stopwords, y por el lado de stemming se usarán las \n",
+        "    reglas del algoritmo de Porter."
       ]
     },
     {
@@ -1716,7 +1807,7 @@
       "metadata": {
         "id": "CwQS8lcLJczI"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1732,7 +1823,7 @@
         "vocab = pre_processing(vocab)\n",
         "vocab"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2184,21 +2275,14 @@
       "source": [
         "def calc_tf(dataset_bow):\n",
         "  ### Aquí inicia tu código ###\n",
-        "  # se obtiene el número de documentos del BOW\n",
         "  n_docs = dataset_bow.shape[0]\n",
-        "  # se guardan las columnas del BOW\n",
         "  columnas = dataset_bow.columns\n",
-        "  # se trabaja con arrays para mayor rapidez\n",
         "  datos = dataset_bow.to_numpy()\n",
-        "  # se crea la lista de tf's\n",
         "  tf = []\n",
-        "  # se recorre a través del número de documentos\n",
         "  for i in range(n_docs):\n",
-        "    # se agrega el tf del documento i, calculado como la frecuencia de la palabra normalizado por la máxima frecuencia en el documento i\n",
         "    tf.append(\n",
         "        datos[i]/datos[i].max()\n",
         "        )\n",
-        "  # se crea el dataframe de tf\n",
         "  index = ['d'+str(i) for i in range(len(dataset_bow))]\n",
         "  tf = pd.DataFrame(tf,columns=columnas,index=index)\n",
         "  return tf\n",
@@ -2549,17 +2633,12 @@
       "source": [
         "def calc_idf(dataset_bow):\n",
         "  ### Aquí inicia tu código ###\n",
-        "  # se obtiene el número de documentos y de palabras en el vocabulario\n",
         "  n_docs = dataset_bow.shape[0]\n",
         "  n_words = dataset_bow.shape[1]\n",
-        "  # vector de doc frequency auxiliar\n",
         "  df = np.zeros(n_words)\n",
-        "  # se recorre a través de las palabras\n",
         "  for i in range(n_words):\n",
-        "    # se obtiene el número de documentos que tiene la palabra i\n",
         "    df[i] = np.sum((dataset_bow.iloc[:,i].values != 0)*1)\n",
-        "  # IDF implementación según sklearn sumando 1 para evitar indeterminaciones en el logaritmo\n",
-        "  #idf_i = np.log((n_docs+1)/(df+1)) +1\n",
+        "    #idf_i = np.log((n_docs+1)/(df+1)) +1\n",
         "\n",
         "  idf_i = np.log10((n_docs)/(df))\n",
         "\n",
@@ -2688,9 +2767,7 @@
         "def calc_tf_idf(tf, idf):\n",
         "  ### Aquí inicia tu código ###\n",
         "  columnas = tf.columns\n",
-        "  # aplicación del TF-IDF\n",
         "  tfidf = tf*idf.values()\n",
-        "  # se pasan los datos a un DataFrame\n",
         "  index = ['d'+str(i) for i in range(len(tf))]\n",
         "  df = pd.DataFrame(tfidf, columns=columnas,index=index)\n",
         "  return df\n",
@@ -3084,6 +3161,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Conclusiones"
+      ],
+      "metadata": {
+        "id": "Vp30C9dCp-cB"
+      }
     },
     {
       "cell_type": "markdown",
