--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "# **Tarea 1 - CC6205 Natural Language Processing 📚**\n",
         "\n",
-        "**Integrantes:**  y Cristóbal Pérez.\n",
+        "**Integrantes:** Marcelo Rojas y Cristóbal Pérez.\n",
         "\n",
         "**Fecha límite de entrega 📆:** Martes 4 de Abril.\n",
         "\n",
@@ -351,7 +351,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +425,7 @@
         "text = codecs.open('/content/CC6205-NLP/marcianeke.txt', 'r', 'UTF-8').read()\n",
         "print(text)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +579,7 @@
         "  return tokens\n",
         "  ### Fin del código ###"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -595,7 +595,7 @@
         "tokens = get_tokens(text)\n",
         "tokens"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1103,7 +1103,7 @@
         "nltk_tokens = wordpunct_tokenize(text)\n",
         "nltk_tokens"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1594,7 +1594,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
