--- a/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
+++ b/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,13 +74,6 @@
         "\n",
         "` ` "
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "vY3fYRGVsB_v"
-      }
     },
     {
       "cell_type": "markdown",
@@ -238,7 +230,7 @@
         "## Parte 2. Naïve Bayes (3 pts)\n",
         "En esta parte programaremos nuestro primer clasificador de documentos. Para esto implementaremos el método **Naïve Bayes Multinomial** usando **Laplace Smothing**.\n",
         "\n",
-        "Por favor, documenten su código. Escriban que hacen las funciones, que reciben, que entregan, etc. Si en algún lugar de su código hacen algo que creen que debe ser explicado, lox comentarios son bienvenidos.\n",
+        "Por favor, documenten su código. Escriban que hacen las funciones, que reciben, que entregan, etc. Si en algún lugar de su código hacen algo que creen que debe ser explicado, los comentarios son bienvenidos.\n",
         "\n"
       ]
     },
@@ -334,11 +326,46 @@
         "class MyMultinomialNB(BaseEstimator, ClassifierMixin):\n",
         "  def __init__(self, alpha=1.0):\n",
         "    # acá tu código para inicializar el clasificador\n",
-        "    ...\n",
+        "    self.alpha = alpha\n",
+        "    self.vocab = None\n",
+        "    self.classes = None\n",
+        "    self.class_probs = None\n",
+        "    self.word_probs = None\n",
         "\n",
         "  def fit(self, X):\n",
         "    # acá tu código para el entrenamiento del modelo\n",
-        "    ...\n",
+        "\n",
+        "    # Se extrae el voabulario\n",
+        "    self.vocab = set()\n",
+        "    for words in X['words']:\n",
+        "      self.vocab.update(words)\n",
+        "\n",
+        "    # Se determina el número de clases\n",
+        "    self.classes = X['class_'].unique()\n",
+        "    # Se determina el número de documentos\n",
+        "    total_docs = len(X)   \n",
+        "\n",
+        "    # Se determinan las probabilidades p(cj) para cada clase\n",
+        "    self.class_probs = {}\n",
+        "    for c_j in self.classes:\n",
+        "      docs_j = X[ X['class_'] == c_j ]\n",
+        "      prob_c_j = np.log( len(docs_j) / total_docs )\n",
+        "      self.class_probs[c_j] = prob_c_j\n",
+        "\n",
+        "    # Se determinan las probabilidades p(wi|cj) para cada palabra y cada clase usando Laplace Smoothing\n",
+        "    self.word_probs = {}\n",
+        "    for c_j in self.classes:\n",
+        "      docs_j = X[ X['class_'] == c_j ]\n",
+        "      text_j = [word for words in docs_j['words'] for word in words]\n",
+        "      n = len(text_j)\n",
+        "\n",
+        "      word_probs = {}\n",
+        "      for word in self.vocab:\n",
+        "        n_k = text_j.count(word)\n",
+        "        word_prob = np.log( ( n_k + self.alpha ) / ( n + self.alpha * len(self.vocab )) )\n",
+        "        word_probs[word] = word_prob\n",
+        "      \n",
+        "      self.word_probs[c_j] = word_probs\n",
         "    \n",
         "    return self\n",
         "\n",
@@ -347,11 +374,12 @@
         "    check_is_fitted(self)\n",
         "\n",
         "    # acá tu código para computar la predicción\n",
-        "    ...\n",
-        "    \n",
+        "    predictions = []\n",
+        "\n",
+        "\n",
         "    return prediction"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -384,7 +412,7 @@
       "metadata": {
         "id": "JjTnFLDGyCEL"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -399,9 +427,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qN1SdLycuK4W",
-        "outputId": "ffeaca24-ac54-48e5-effb-4675e572251f"
+        "outputId": "c22091c4-140c-4ca5-8110-3cc143cac103"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,9 +482,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3c78efe9-b668-40fb-fdcb-bd9307c2a58f"
+        "outputId": "325f93d9-37c7-484f-8f10-4b47ba7b6c27"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,6 +501,35 @@
             "                                       words class_\n",
             "0  (Chinese, Chinese, Chinese, Tokyo, Japan)   None\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab = set()\n",
+        "for words in X_train['words']:\n",
+        "  vocab.update(words)\n",
+        "vocab"
+      ],
+      "metadata": {
+        "id": "I-UkRxPsYr2z",
+        "outputId": "8aac823c-64bb-444d-8f70-a31c2d7b8a92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Beijing', 'Chinese', 'Japan', 'Macao', 'Shanghai', 'Tokyo'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     },
