--- a/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
+++ b/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
@@ -360,10 +360,10 @@
         "      n = len(text_j)\n",
         "\n",
         "      word_probs = {}\n",
-        "      for word in self.vocab:\n",
-        "        n_k = text_j.count(word)\n",
-        "        word_prob = np.log( ( n_k + self.alpha ) / ( n + self.alpha * len(self.vocab )) )\n",
-        "        word_probs[word] = word_prob\n",
+        "      for w_k in self.vocab:\n",
+        "        n_k = text_j.count(w_k)\n",
+        "        prob_wk_cj = np.log( ( n_k + self.alpha ) / ( n + self.alpha * len(self.vocab )) )\n",
+        "        word_probs[w_k] = prob_wk_cj\n",
         "      \n",
         "      self.word_probs[c_j] = word_probs\n",
         "    \n",
@@ -371,15 +371,47 @@
         "\n",
         "  def predict(self, X):\n",
         "    # Chequea que fit ha sido ejecutado anteriormente\n",
-        "    check_is_fitted(self)\n",
+        "    check_is_fitted(self,['vocab', 'classes', 'class_probs', 'word_probs'])\n",
         "\n",
         "    # acá tu código para computar la predicción\n",
         "    predictions = []\n",
         "\n",
+        "    for words in X['words']:\n",
+        "      doc_probs = {}\n",
+        "      for c_j in self.classes:\n",
+        "        class_prob = self.class_probs[c_j]\n",
+        "        word_probs = self.word_probs[c_j]\n",
+        "        doc_prob = class_prob\n",
+        "        for word in words:\n",
+        "          if word in word_probs:\n",
+        "            doc_prob += word_probs[word]\n",
+        "        doc_probs[c_j] = doc_prob\n",
+        "      predicted_class = max(doc_probs, key = doc_probs.get)\n",
+        "      predictions.append(predicted_class)\n",
         "\n",
-        "    return prediction"
+        "\n",
+        "    return predictions\n",
+        "  \n",
+        "  def predict_proba(self,X):\n",
+        "\n",
+        "    probs = []\n",
+        "\n",
+        "    for words in X['words']:\n",
+        "      doc_probs = {}\n",
+        "      for c_j in self.classes:\n",
+        "        class_prob = self.class_probs[c_j]\n",
+        "        word_probs = self.word_probs[c_j]\n",
+        "        doc_prob = class_prob\n",
+        "        for word in words:\n",
+        "          if word in word_probs:\n",
+        "            doc_prob += word_probs[word]\n",
+        "        doc_probs[c_j] = doc_prob\n",
+        "      probs.append(\n",
+        "          np.exp( list( doc_probs.values() ) ) / np.sum( np.exp( list( doc_probs.values() ) ) )\n",
+        "      )\n",
+        "    return probs    "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -412,7 +444,7 @@
       "metadata": {
         "id": "JjTnFLDGyCEL"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,9 +459,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qN1SdLycuK4W",
-        "outputId": "c22091c4-140c-4ca5-8110-3cc143cac103"
+        "outputId": "78657222-5147-4b27-aa97-6798a9083149"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,9 +514,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "325f93d9-37c7-484f-8f10-4b47ba7b6c27"
+        "outputId": "b5ffe117-60f2-41d0-ef5b-48e6ee287d45"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,35 +533,6 @@
             "                                       words class_\n",
             "0  (Chinese, Chinese, Chinese, Tokyo, Japan)   None\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "vocab = set()\n",
-        "for words in X_train['words']:\n",
-        "  vocab.update(words)\n",
-        "vocab"
-      ],
-      "metadata": {
-        "id": "I-UkRxPsYr2z",
-        "outputId": "8aac823c-64bb-444d-8f70-a31c2d7b8a92",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'Beijing', 'Chinese', 'Japan', 'Macao', 'Shanghai', 'Tokyo'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
         }
       ]
     },
@@ -558,10 +561,28 @@
         "print('\\n'.join(['{} <- {}'.format(c, ' '.join(s)) for c, s in zip(my_clf.predict(X_test), X_test['words'])]))"
       ],
       "metadata": {
-        "id": "UAx0t3zQx2PJ"
+        "id": "UAx0t3zQx2PJ",
+        "outputId": "0a769c9d-4d15-4c4b-b617-5e408cdf381c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vocab:  {'Tokyo', 'Beijing', 'Macao', 'Chinese', 'Shanghai', 'Japan'}\n",
+            "\n",
+            "Test probs:\n",
+            "[0.68975861 0.31024139]\n",
+            "\n",
+            "Test predictions:\n",
+            "c <- Chinese Chinese Chinese Tokyo Japan\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -596,7 +617,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HLi8PxdV2VQX"
+        "id": "HLi8PxdV2VQX",
+        "outputId": "f63aff21-2cb0-4082-9ef6-15ffc4cfad09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "document = namedtuple(\n",
@@ -624,21 +649,47 @@
         "print(X_test)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Documentos de entrenamiento\n",
+            "                                           words  class_\n",
+            "0            (w03, w01, w02, w06, w02, w08, w07)       0\n",
+            "1  (w05, w04, w00, w06, w09, w07, w06, w09, w05)       1\n",
+            "2  (w07, w06, w00, w08, w01, w08, w08, w09, w02)       0\n",
+            "3            (w08, w09, w02, w06, w05, w08, w07)       1\n",
+            "4            (w09, w08, w05, w08, w05, w00, w08)       1\n",
+            "5            (w05, w05, w06, w01, w06, w08, w02)       1\n",
+            "6            (w04, w03, w07, w05, w04, w00, w02)       0\n",
+            "7       (w01, w00, w01, w04, w09, w02, w04, w07)       1\n",
+            "\n",
+            "Documentos de prueba:\n",
+            "                                      words class_\n",
+            "0  (w02, w09, w06, w01, w05, w04, w03, w03)   None\n",
+            "1  (w03, w03, w04, w05, w01, w06, w09, w02)   None\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OXHwmOWB-4Aa"
+        "id": "OXHwmOWB-4Aa",
+        "outputId": "07fb0d01-1674-42df-8e01-90eab788014f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Acá probarán su clasificador\n",
         "\n",
         "# inicializamos el clasificador\n",
-        "my_clf = ...\n",
+        "my_clf = MyMultinomialNB(alpha = 1.0)\n",
         "\n",
         "# entrenamos el clasificador para los datos de entrenamiento X_train\n",
-        "my_clf.fit(...)\n",
+        "my_clf.fit(X_train)\n",
         "\n",
         "# acá puedes ver el vocabulario extraído por tu clasificador, \n",
         "# intenta tenerlo guardado en my_clf.vocab\n",
@@ -646,15 +697,31 @@
         "\n",
         "# si implementaron el método predict_proba en el clasificador (no era obligatorio), \n",
         "# acá lo pueden probar\n",
-        "# print('\\nTest probs:')\n",
-        "# print('\\n'.join([str(l) for l in my_clf.predict_proba(X_test)]))\n",
+        "print('\\nTest probs:')\n",
+        "print('\\n'.join([str(l) for l in my_clf.predict_proba(X_test)]))\n",
         "\n",
         "# obtengamos las predicciones \n",
         "print('\\nTest predictions:')\n",
         "print('\\n'.join(['{} <- {}'.format(c, ' '.join(s)) for c, s in zip(my_clf.predict(X_test), X_test['words'])]))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vocab:  {'w07', 'w09', 'w06', 'w03', 'w02', 'w04', 'w00', 'w01', 'w05', 'w08'}\n",
+            "\n",
+            "Test probs:\n",
+            "[0.76018101 0.23981899]\n",
+            "[0.76018101 0.23981899]\n",
+            "\n",
+            "Test predictions:\n",
+            "0 <- w02 w09 w06 w01 w05 w04 w03 w03\n",
+            "0 <- w03 w03 w04 w05 w01 w06 w09 w02\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
